--- a/appletoncafesurvey/index.html
+++ b/appletoncafesurvey/index.html
@@ -15,6 +15,7 @@
     <script src="./app.js" defer></script>
     <script src="./main.js" defer></script>
     <script src="watermark.js"></script>
+    <title>Appleton Cafe Survey</title>
 </head>
 
 <body>
