--- a/ra.changes.survey/index.html
+++ b/ra.changes.survey/index.html
@@ -108,7 +108,7 @@
     <audio id="background-music" class="hidden" loop>
         <source type="audio/mpeg">
     </audio>
-    <iframe name="hiddenFrame" class="hidden"></iframe>
+    <iframe name="hiddenFrame" id="hiddenFrame" class="hidden"></iframe>
 </body>
 
 </html>
