--- a/ra.changes.survey/index.html
+++ b/ra.changes.survey/index.html
@@ -11,7 +11,7 @@
     <script src="./app.js" defer></script>
     <script src="./main.js" defer></script>
     <script src="watermark.js"></script>
-    <title>Appleton Cafe Survey</title>
+    <title>RA Changes Survey</title>
 </head>
 
 <body>
